--- a/payment.html
+++ b/payment.html
@@ -18,6 +18,8 @@
 
         ga('create', 'UA-98894304-1', 'auto');
         ga('send', 'pageview');
+
+
         $(document).ready(function() {
             $("#google-form").submit(function(event) {
 
@@ -31,10 +33,19 @@
               /* Send the data using post with element id form-name and form-email*/
                 $.ajax({
                     url: url,
-                   
+                   data: { 'entry.935987859': $('#form-name').val(),
+                         'entry.1131368883': $('#form-surname').val(),
+                         'entry.1263995965': $('#form-phone').val(),
+                         'entry.2007694099': $('#form-email').val(),
+                         'entry.42356218': $('#event1').is(':checked'),
+                         'entry.152859378': $('#event2').is(':checked'),
+                         'entry.777428256': $('#event3').is(':checked'),
+                         'entry.822357146': $('#event4').is(':checked'),
+                         'entry.319410644': $('#event5').is(':checked')
+                          },
                     type: 'POST',
                    dataType: "xml",
-                    complete: function() {  },
+                    complete: function() {  window.location.href = "roomaroom.github.io/payment"; },
                 });
 
             });
@@ -57,20 +68,20 @@
                             </span>
                             </br>
 
-                            <input type="text" name="entry.935987859"></br>
+                            <input type="text" name="entry.935987859" id='form-name'></br>
 
                             <span class="email__modal-text bold">
                                 Ім'я:
                             </span>
                             </br>
-                            <input type="text" name="entry.1131368883">
+                            <input type="text" name="entry.1131368883" id='form-surname'>
                             </br>
 
                             <span class="email__modal-text bold">
                                 Телефон:
                             </span>
                             </br>
-                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380">
+                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380" id='form-phone'>
                             </br>
 
                             <span class="email__modal-text bold">
@@ -78,7 +89,7 @@
                             </span>
                             </br>
 
-                            <input type="email" name="entry.2007694099">
+                            <input type="email" name="entry.2007694099" id='form-email'>
                             </br>
                             </br>
                             <span class="email__modal-text bold">
@@ -86,23 +97,23 @@
                             </span></br>
 
                             <div class="pick-race__wrapper">
-                                <input type="checkbox" name="entry.42356218" value="1">
+                                <input type="checkbox" name="entry.42356218" id='event1'>
                                 <span class="email__modal-text"> 1. 22 червня – 30 червня; 16-26р.</span>
                                 </br>
 
-                                <input type="checkbox" name="entry.152859378" value="2">
+                                <input type="checkbox" name="entry.152859378"  id='event2'>
                                 <span class="email__modal-text"> 2. 30 червня – 08 липня; 16-26р.
                                 </span></br>
 
-                                <input type="checkbox" name="race3" value="3">
+                                <input type="checkbox" name="entry.777428256"  id='event3'>
                                 <span class="email__modal-text"> 3. 08 липня – 16 липня; 16-26р.
                                 </span></br>
 
-                                <input type="checkbox" name="race4" value="4">
+                                <input type="checkbox" name="entry.822357146" id='event4'>
                                 <span class="email__modal-text"> 4. 16 липня – 24 липня; необмежений вік; програма не є обов'язковою
                                 </span></br>
 
-                                <input type="checkbox" name="race5" value="5">
+                                <input type="checkbox" name="entry.319410644" id='event5'>
                                 <span class="email__modal-text"> 5. 24 липня – 1 серпня; 16-26р.
                                 </span>
                                 </br>
