--- a/firststep.html
+++ b/firststep.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AliveCamp</title>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/steps.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -21,7 +21,24 @@
     <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter44575906 = new Ya.Metrika({ id:44575906, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <!-- /Yandex.Metrika counter -->
 </head>
 <body>
-        
-
+    <section class="first-step__container">
+        <div class="row first-step__row">
+            <div class="col-md-6 col-md-offset-3 first-step__wrapper">
+                <h1 class="first-step__headind first-step__heading_one">
+                    ВІТАЄМО!
+                </h1>
+                <h2 class="first-step__headind first-step__headind_two">
+                    ВАШУ АНКЕТУ ПРИЙНЯТО :)
+                </h2>
+                <span class="first-step__headind first-step__task">
+                    Виконайте 2-ий крок реєстрації:
+                </span>
+                <br>
+                <a href="#" class="first-step__link">
+                    <span>ОПЛАТІТЬ ВАРТІСТЬ УЧАСТІ</span>
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
