--- a/index.html
+++ b/index.html
@@ -91,22 +91,11 @@
                                 <h4 class="modal-title">ALIVE CAMP</h4>
                             </div>
                             <div class="modal-body">
-                                <iframe id="cartoonVideo" width="560" height="315" src="//www.youtube.com/embed/w14t6go9mx8"   frameborder="0" allowfullscreen></iframe>
+                                <iframe id="cartoonVideo" width="560" height="315" src="//www.youtube.com/embed/w14t6go9mx8 "   frameborder="0" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
-                <script type="text/javascript">
-                    $(document).ready(function(){
-                        var url = $("#cartoonVideo").attr('src');
-                        $("#myModal").on('hide.bs.modal', function(){
-                            $("#cartoonVideo").attr('src', '');
-                        });
-                        $("#myModal").on('show.bs.modal', function(){
-                            $("#cartoonVideo").attr('src', url);
-                        });
-                    });
-                </script>
 
                 <div class="col-lg-3 col-lg-offset-3">
                     <a href="#myModal" data-toggle="modal">
@@ -639,6 +628,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/application.js" type="text/javascript"></script>
+    <script src="./js/iframevideo.js"></script>
 
 </body>
 </html>
