chage link for form

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                           },
                     type: 'POST',
                    dataType: "xml",
-                    complete: function() {  window.location.href = "roomaroom.github.io/payment"; },
+                    complete: function() {  window.location.href = "firststep"; },
                 });
 
             });
