--- a/firststep.html
+++ b/firststep.html
@@ -34,7 +34,7 @@
                     Виконайте 2-ий крок реєстрації:
                 </span>
                 <br>
-                <a href="#" class="first-step__link">
+                <a href="https://www.liqpay.com/ru/checkout/card/alivecamp" class="first-step__link">
                     <span>ОПЛАТІТЬ ВАРТІСТЬ УЧАСТІ</span>
                 </a>
             </div>
