--- a/secondstep.html
+++ b/secondstep.html
@@ -44,7 +44,7 @@
                         </span>
                         <br>
                         <br>
-                        <a href="alivecamp.com.ua" class="first-step__link second-step_button">
+                        <a href="/" class="first-step__link second-step_button">
                             <span>ПОВЕРНУТИСЬ НА САЙТ</span>
                         </a>
                     </div>
