--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             </tr>
                             <tr class="table-backdown">
                                 <td><span>4</span></td>
-                                <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><span>&#9913</span></td>
+                                <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><small>&#9913</small></td>
                                 <td>ВІК УЧАСНИКІВ<br/>НЕОБМЕЖЕНИЙ</td>
                           </tr>
                           <tr>
