--- a/index.html
+++ b/index.html
@@ -601,27 +601,92 @@
                 <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active srle">
-                  <img src="img/TR_AliveCamp-87.jpg" alt="1.jpg" class="img-responsive">
+                  <img src="img/slider/1.jpg" alt="1.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/TR_AliveCamp-141.jpg" alt="2.jpg" class="img-responsive">
+                  <img src="img/slider/2.jpg" alt="2.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/TR_AliveCamp-170.jpg" alt="3.jpg" class="img-responsive">
+                  <img src="img/slider/3.jpg" alt="2.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/TR_AliveCamp-198.jpg" alt="4.jpg" class="img-responsive">
+                  <img src="img/slider/4.jpg" alt="2.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/6nndg_tfwVw.jpg" alt="5.jpg" class="img-responsive">
+                  <img src="img/slider/5.jpg" alt="2.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/arZCdVWsMXI.jpg" alt="6.jpg" class="img-responsive">
+                  <img src="img/slider/6.jpg" alt="2.jpg" class="img-responsive">
                 </div>
                 <div class="item">
-                  <img src="img/E1ULSAAzZjQ.jpg" alt="7.jpg" class="img-responsive">
+                  <img src="img/slider/7.jpg" alt="2.jpg" class="img-responsive">
                 </div>
-
+                <div class="item">
+                  <img src="img/slider/8.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/9.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/10.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/11.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/12.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/13.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/14.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/15.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/16.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/17.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/18.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/19.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/20.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/21.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/22.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/23.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/24.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/25.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/26.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/27.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/28.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/slider/29.jpg" alt="2.jpg" class="img-responsive">
+                </div>
               </div>
             </div>
                 <!-- Controls -->
@@ -638,25 +703,28 @@
                     <!-- Thumbnails -->
                     <ul class="thumbnails-carousel">
                         <li class="thumbnails">
-                            <img src="img/TR_AliveCamp-87.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/1.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/TR_AliveCamp-141.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/2.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/TR_AliveCamp-170.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/3.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/TR_AliveCamp-198.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/4.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/6nndg_tfwVw.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/5.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/arZCdVWsMXI.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/6.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/E1ULSAAzZjQ.jpg" alt="1_tn.jpg">
+                            <img src="img/slider/7.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/slider/8.jpg" alt="1_tn.jpg">
                         </li>
                     </ul>
                 </div>
