add required to firm inputs

--- a/index.html
+++ b/index.html
@@ -526,20 +526,20 @@
                             </span>
                             </br>
 
-                            <input type="text" name="entry.935987859" id='form-name'></br>
+                            <input type="text" name="entry.935987859" id='form-name' required></br>
 
                             <span class="email__modal-text bold">
                                 Ім'я:
                             </span>
                             </br>
-                            <input type="text" name="entry.1131368883" id='form-surname'>
+                            <input type="text" name="entry.1131368883" id='form-surname' required>
                             </br>
 
                             <span class="email__modal-text bold">
                                 Телефон:
                             </span>
                             </br>
-                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380" id='form-phone'>
+                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380" id='form-phone' required>
                             </br>
 
                             <span class="email__modal-text bold">
@@ -547,7 +547,7 @@
                             </span>
                             </br>
 
-                            <input type="email" name="entry.2007694099" id='form-email'>
+                            <input type="email" name="entry.2007694099" id='form-email' required>
                             </br>
                             </br>
                             <span class="email__modal-text bold">
