--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </button>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3" id="for-anchor">
                     <a href="#reg__section" rel="nofollow">
                       <button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ
                       </button>
