connect CenturyGothic font

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <a id="aktyvnosti_anchor"></a>
         <div id="aktyvnosti">
           <div class="row centered">
-                        <h1 style="color: white; font-weight: bold; letter-spacing: 3px;">АКТИВНОСТІ</h1>
+                        <h1 class="activity__heading" ">АКТИВНОСТІ</h1>
                         <h2 сlass="activ">ДЛЯ ТІЛА</h2>
                   <div class="tilo"></div>
                                 <div class="col-xs-12 col-sm-12">
