fix phones in nav

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </button>
             </div>
             <div class="col-md-1">
-                <img src="img/arrow_step.png" class="img-responsive reg__arrow">
+                <img src="img/ico_dash_2.png" class="img-responsive reg__arrow">
             </div>
             <!-- step two -->
             <div class="col-md-4">
@@ -455,7 +455,7 @@
                 </button>
             </div>
             <div class="col-md-1">
-                <img src="img/arrow_step.png" class="img-responsive reg__arrow">
+                <img src="img/ico_dash_2.png" class="img-responsive reg__arrow">
             </div>
             <!-- step three -->
             <div class="col-md-3">
