fix_activity_underlines

--- a/index.html
+++ b/index.html
@@ -299,106 +299,114 @@
     </div>
     <!-- Actiity -->
     <a id="aktyvnosti_anchor"></a>
-        <div id="aktyvnosti">
-          <div class="row centered">
-                        <h1 class="activity__heading" ">АКТИВНОСТІ</h1>
-                        <h2 сlass="activ">ДЛЯ ТІЛА</h2>
-                  <div class="tilo"></div>
-                                <div class="col-xs-12 col-sm-12">
-                                    <div class="circle col-xs-12 col-sm-2 col-sm-offset-1">
-                                        <img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
-                                        <span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2">
-                                        <img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
-                                        <span class="text_center pos_foot">ФУТБОЛ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2">
-                                        <img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
-                                        <span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2">
-                                        <img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
-                                        <span class="text_center pos_badm">БАДМІНТОН</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2 ">
-                                        <img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
-                                        <span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
-                                    </div>
-                             </div>
-                    </div>
-                    <div class="row centered">
-                        <h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
-              <div class="duh"></div>
-                            <div class="col-sm-12 rin">
-                                <div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
-                                    <img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-                                    <span class="text_center pos pr">РІЗНІ ВИДИ МОЛИТОВ</span>
-                                </div>
-                                <div class="circle col-xs-12 col-sm-2 ">
-                                    <img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-                                    <span class="text_center pos hb">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
-                                </div>
-                                <div class="circle col-xs-12 col-sm-2">
-                                    <img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-                                    <span class="text_center pos ch">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
-                                </div>
-                                <div class="circle col-xs-12 col-sm-2 ">
-                                    <img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-                                    <span class="text_center pos qu">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
-                                </div>
-                          </div>
-                    </div>
+    <div id="aktyvnosti">
+        <div class="row centered">
+            <h1 class="activity__heading">АКТИВНОСТІ</h1>
+            <div class="tilo-wrapper">
+                <h2 class="activ">ДЛЯ ТІЛА</h2>
+                <div class="tilo"></div>
+            </div>
+            <div class="col-xs-12 col-sm-12">
+                <div class="circle col-xs-12 col-sm-2 col-sm-offset-1">
+                    <img src="img\ico_round_vol.png" alt="волейбол" class="image-tam">
+                    <span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2">
+                    <img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
+                    <span class="text_center pos_foot">ФУТБОЛ</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2">
+                    <img src="img\ico_round_ten.png" alt="настільний теніс" class="image-tam">
+                    <span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2">
+                    <img src="img\ico_round_badm.png" alt="бадмінтон" class="image-tam">
+                    <span class="text_center pos_badm">БАДМІНТОН</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2 ">
+                    <img src="img\ico_round_polo.png" alt="водне поло" class="image-tam">
+                    <span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
+                </div>
+            </div>
         </div>
-                    <div class="delta">
-                        <div class="row centered">
-              <div class="dottedin">
-                          <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
-                  <div class="rozum"></div>
-              </div>
-                                <div class="col-xs-12 col-sm-12 rin">
-                                    <div class="circle col-sm-2 col-sm-offset-2">
-                                        <img src="img\ico_round_ma.png" alt="МАФІЯ" class="image-tam">
-                                        <span class="text_center post ma">МАФІЯ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2 ">
-                                        <img src="img\dix.png" alt="DIXIT, TWINS, UNO, JENGA та ІНШІ" class="image-tam">
-                                        <span class="text_center post dix">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2">
-                                        <img src="img\ico_round_pa.png" alt="ПАРАСТАС" class="image-tam">
-                                        <span class="text_center post pa">ПАРАСТАС</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2 ">
-                                        <img src="img\ico_round_zo.png" alt="ЗООПАРК" class="image-tam">
-                                        <span class="text_center post zo">ЗООПАРК</span>
-                                    </div>
-                               </div>
-                            </div>
-                        <div class="row centered">
-                          <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
-                <div class="samorozvytok"></div>
-                            <div class="col-xs-12 col-sm-12 rin">
-                                    <div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
-                                        <img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
-                                        <span class="text_center posreg gitar">УРОКИ ГРИ НА ГІТАРІ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2 ">
-                                        <img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
-                                        <span class="text_center posreg re">КУРС ПРО СТОСУНКИ</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2">
-                                        <img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
-                                        <span class="text_center posreg engli">ENGLISH CLUB</span>
-                                    </div>
-                                    <div class="circle col-xs-12 col-sm-2 ">
-                                        <img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
-                                        <span class="text_center posreg po">ПОЕТИЧНІ ВИСТУПИ</span>
-                                    </div>
-                              </div>
+        <div class="row centered">
+            <div class="tilo-wrapper duh-wrapper">
+                <h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
+                <div class="tilo duh"></div>
+            </div>
+                <div class="col-sm-12 rin">
+                    <div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
+                        <img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
+                        <span class="text_center pos pr">РІЗНІ ВИДИ МОЛИТОВ</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2 ">
+                        <img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
+                        <span class="text_center pos hb">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2">
+                        <img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
+                        <span class="text_center pos ch">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
+                    </div>
+                    <div class="circle col-xs-12 col-sm-2 ">
+                        <img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
+                        <span class="text_center pos qu">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="delta">
+        <div class="row centered">
+            <div class="dottedin">
+                <div class="tilo-wrapper rozum-wrapper">
+                    <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
+                    <div class="tilo rozum"></div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 rin">
+                <div class="circle col-sm-2 col-sm-offset-2">
+                    <img src="img\ico_round_ma.png" alt="МАФІЯ" class="image-tam">
+                    <span class="text_center post ma">МАФІЯ</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2 ">
+                    <img src="img\dix.png" alt="DIXIT, TWINS, UNO, JENGA та ІНШІ" class="image-tam">
+                    <span class="text_center post dix">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2">
+                    <img src="img\ico_round_pa.png" alt="ПАРАСТАС" class="image-tam">
+                    <span class="text_center post pa">ПАРАСТАС</span>
+                </div>
+                <div class="circle col-xs-12 col-sm-2 ">
+                    <img src="img\ico_round_zo.png" alt="ЗООПАРК" class="image-tam">
+                    <span class="text_center post zo">ЗООПАРК</span>
+                </div>
+           </div>
+        </div>
+            <div class="row centered">
+                <div class="tilo-wrapper samorozvytok-wrapper">
+                    <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
+                    <div class="tilo samorozvytok"></div>
+                </div>
+                <div class="col-xs-12 col-sm-12 rin">
+                        <div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
+                            <img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
+                            <span class="text_center posreg gitar">УРОКИ ГРИ НА ГІТАРІ</span>
                         </div>
-                    </div>
+                        <div class="circle col-xs-12 col-sm-2 ">
+                            <img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
+                            <span class="text_center posreg re">КУРС ПРО СТОСУНКИ</span>
+                        </div>
+                        <div class="circle col-xs-12 col-sm-2">
+                            <img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
+                            <span class="text_center posreg engli">ENGLISH CLUB</span>
+                        </div>
+                        <div class="circle col-xs-12 col-sm-2 ">
+                            <img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
+                            <span class="text_center posreg po">ПОЕТИЧНІ ВИСТУПИ</span>
+                        </div>
+                  </div>
+            </div>
         </div>
+    </div>
     <!-- REGISTRATION SECTION -->
     <a id="reg__section"></a>
     <section class="reg__section">
